# hacktoberfest

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: Master.yml  PR.yml  Release.yml  codeql.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  target.yml
backend/src/: config.rs  defaults.rs  github.rs  main.rs  scraper.rs
backend/src/handlers/: contributors.rs  healthcheck.rs  metrics.rs  mod.rs  pullrequest.rs  repo.rs  repositories.rs
frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: entry.express.tsx  entry.polka.tsx  entry.ssr.tsx  env.d.ts  env.ts  global.css  root.tsx
frontend/src/components/contributor-card/: contributor-card.css  contributor-card.tsx  index.ts
frontend/src/components/countdown/: countdown.css  countdown.tsx  index.ts
frontend/src/components/header/: header.css  header.tsx
frontend/src/components/icons/: ic_astro.tsx  ic_brainfuck.tsx  ic_c.tsx  ic_chevron-right.tsx  ic_clisp.tsx  ic_clojure.tsx  ic_cpp.tsx  ic_csharp.tsx  ic_css.tsx  ic_docker.tsx  ic_elm.tsx  ic_fantom.tsx  ic_github.tsx  ic_go.tsx  ic_handlebars.tsx  ic_html.tsx  ic_java.tsx  ic_javascript.tsx  ic_kotlin.tsx  ic_makefile.tsx  ic_mathematica.tsx  ic_mint.tsx  ic_ruby.tsx  ic_rust.tsx  ic_scss.tsx  ic_shell.tsx  ic_svelte.tsx  ic_typescript.tsx  ic_vue.tsx  index.ts
frontend/src/components/issue-card/: index.ts  issue-card.css  issue-card.tsx
frontend/src/components/label/: index.ts  label.css  label.tsx
frontend/src/models/: contributor.ts  issue.ts  label.ts  repository.ts  user.ts
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/services/: dumb.json  filter-repositories.ts  list-categories.ts  list-contributors.ts  list-repositories.ts  sort-contributors.ts  sort-issues.ts
frontend/src/styles/: index.css
frontend/tests/components/: contributor-card.test.tsx  contributors.fixture.ts  countdown.test.tsx  issue-card.test.tsx
frontend/tests/services/: contributors.fixture.ts  list-categories.test.ts  list-contributors.test.ts  repositories.fixture.ts
(+5 files in other folders)
